fix: fixed the bug when image overflow the buttons around

--- a/src/components/Home/Contact/Contact.module.scss
+++ b/src/components/Home/Contact/Contact.module.scss
@@ -28,12 +28,21 @@
   div {
     position: relative;
     width: 100vw;
-    img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    div {
+      overflow: hidden;
       position: absolute;
-      
       width: 100%;
       height: 100%;
-      transform:scale(1.8)
+      img {
+        width: 100%;
+        height: 100%;
+        
+        transform:scale(1.8);
+      }
     }
   }
 }
